feat: retrievie permissions for individual user
