# pkg/permissions/routes.go
@@ -1,0 +1,12 @@
+package permissions
+
+const (
+	PermissionsEndpoint      = "/permissions"
+	PermissionGroupsEndpoint = "/groups"
+)
+
+// func AddPermissionsRoutes(rg *gin.RouterGroup) {
+// 	permissions := rg.Group(PermissionsEndpoint){
+// 		permissions.GET("/", middleware.AuthMiddleware() func)
+// 	}
+// }
